--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "string-similarity": "^4.0.4",
     "typescript": "^4.5.2",
     "web-vitals": "^1.1.2"
   },
